Add postgres JDBC 9.4 driver

--- a/postgresql_master.properties
+++ b/postgresql_master.properties
@@ -112,7 +112,7 @@ js.dbName=db
 #
 # maven.jdbc.groupId=postgresql
 # maven.jdbc.artifactId=postgresql
-# maven.jdbc.version=9.2-1002.jdbc4
+maven.jdbc.version=9.4-1201.jdbc4
 
 
 # 2) Skip JDBC Driver Deploy
