Fix SSL connections and make README up-to-date.

--- a/postgresql/db.template.properties
+++ b/postgresql/db.template.properties
@@ -7,10 +7,10 @@ sugarcrm.dbName=sugarcrm
 foodmart.dbName=foodmart
 
 # jdbc url templates...assume same host, port, db type
-admin.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/postgres?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-js.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${js.dbName}?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-sugarcrm.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${sugarcrm.dbName}?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-foodmart.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${foodmart.dbName}?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+admin.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/postgres?ssl=true&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
+js.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${js.dbName}?ssl=true&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
+sugarcrm.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${sugarcrm.dbName}?ssl=true&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
+foodmart.jdbcUrl=jdbc:postgresql://${dbHost}:${dbPort}/${foodmart.dbName}?ssl=true&amp;sslfactory=org.postgresql.ssl.NonValidatingFactory
 
 # Websphere specific properties
 # jdbc driver properties for jasperserver datasource
