--- a/postgresql_master.properties
+++ b/postgresql_master.properties
@@ -68,7 +68,7 @@ dbPassword=db_password_to_replace
 # (uncomment these if you want non-default settings)
 
 # JasperServer db name, sample db names
-js.dbName=db
+js.dbName=db_name_to_replace
 # js.dbName=jasperserver
 # sugarcrm.dbName=sugarcrm
 # foodmart.dbName=foodmart
